# dictator

./: .gitignore  .gitmodules  README.md  project.clj
src/main/clojure/dictator/: app.clj  audio.clj  engine.clj  ui.clj  util.clj
src/main/java/dictator/: LCDPanel.java  Native.java
src/main/native/: CMakeLists.txt  audio.c  dictator_Native.h  jni_util.h  ui_macos.m
src/main/resources/dictator/: tokens.clj  ui.properties
